--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
+		"@astrojs/sitemap": "^3.2.1",
+		"@fontsource-variable/inter": "^5.1.1",
 		"set-cookie-parser": "^2.5.1"
 	},
 	"keywords": [
