--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^4.0.8",
+		"@astrojs/partytown": "^2.1.3",
 		"@astrojs/sitemap": "^3.2.1",
+		"@astrojs/tailwind": "^6.0.0",
 		"@fontsource-variable/inter": "^5.1.1",
 		"set-cookie-parser": "^2.5.1"
 	},
