--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@fontsource-variable/inter": "^5.1.1",
 		"astro-compress": "^2.3.6",
 		"astro-icon": "^1.1.5",
+		"lodash.merge": "^4.6.2",
 		"set-cookie-parser": "^2.5.1"
 	},
 	"keywords": [
