--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"@astrojs/partytown": "^2.1.3",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^6.0.0",
+		"@astrolib/analytics": "^0.6.1",
+		"@astrolib/seo": "^1.0.0-beta.8",
 		"@fontsource-variable/inter": "^5.1.1",
 		"astro-compress": "^2.3.6",
 		"astro-icon": "^1.1.5",
