--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"@fontsource-variable/inter": "^5.1.1",
 		"astro-compress": "^2.3.6",
 		"astro-icon": "^1.1.5",
+		"express": "^4.21.2",
+		"express-openid-connect": "^2.17.1",
 		"lodash.merge": "^4.6.2",
 		"set-cookie-parser": "^2.5.1",
 		"tailwindcss": "^4.0.6"
