--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
 		"astro-icon": "^1.1.5",
 		"express": "^4.21.2",
 		"express-openid-connect": "^2.17.1",
+		"limax": "^4.1.0",
 		"lodash.merge": "^4.6.2",
+		"reading-time": "^1.5.0",
 		"set-cookie-parser": "^2.5.1",
-		"tailwindcss": "^4.0.6"
+		"tailwindcss": "^4.0.6",
+		"unpic": "^4.1.2"
 	},
 	"files": [
 		"dist",
